# src/main/java/com/alexa/account_opening_service/entity/AccountType.java
@@ -1,0 +1,7 @@
+package com.alexa.account_opening_service.entity;
+
+public enum AccountType {
+    SAVINGS,
+    CURRENT,
+    INVESTMENT
+}
