# src/main/java/com/alexa/account_opening_service/service/mapper/CustomerAccountResponseMapper.java
@@ -2,21 +2,21 @@ package com.alexa.account_opening_service.service.mapper;
 
 import com.alexa.account_opening_service.dto.AccountResponseDTO;
 import com.alexa.account_opening_service.entity.AccountRequest;
-import org.mapstruct.Mapper;
-import org.mapstruct.ReportingPolicy;
+import jakarta.validation.Valid;
 
-/**
- * Mapper for the entity {@link AccountRequest} and its DTO {@link AccountResponseDTO}.
- */
-@Mapper(componentModel = "spring", uses = {}, unmappedTargetPolicy = ReportingPolicy.WARN)
-public interface CustomerAccountResponseMapper extends EntityMapper<AccountResponseDTO, AccountRequest> {
-    default AccountRequest fromId(Long id) {
-        if (id == null) {
-            return null;
-        }
-        // TODO: fix setter with lombok
-        AccountRequest accountRequest = new AccountRequest();
-        accountRequest.setId(id);
-        return accountRequest;
+public class CustomerAccountResponseMapper {
+
+    private CustomerAccountResponseMapper() {
+        // static access only
+    }
+
+    public static AccountResponseDTO mapToResponse(@Valid final AccountRequest accountRequest) {
+        return AccountResponseDTO.builder()
+                .withId(accountRequest.getId() != null ? accountRequest.getId() : null)
+                .withRequestId(accountRequest.getRequestId() != null ? accountRequest.getRequestId() : null)
+                .withStatus(accountRequest.getStatus() != null ? accountRequest.getStatus() : null)
+                .withState(accountRequest.getState() != null ? accountRequest.getState() : null)
+                .withMessage(accountRequest.getMessage() != null ? accountRequest.getMessage() : null)
+                .build();
     }
 }
